# 03-Docker_Image_pipeline

./: Dockerfile
.github/workflows/: 01-frontend.yaml  04-centra-docker-image.yaml  05-centra-docker-file.yaml  centra-docker-file.yaml  docker-build.yml
backend/: .gitignore  Dockerfile  __init__.py  app.py  auth.py  base.py  cleanup.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  schemas.py
backend/alembic/: env.py
backend/routes/: admin_routes.py  doc_routes.py  module_routes.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vite.config.mjs
frontend/src/: App.jsx
frontend/src/components/: AddModuleModal.jsx  AdminDashboard.jsx  AdminLogin.jsx  CourseContent.jsx  DocumentView.jsx  Editor.jsx  InternshipPath.jsx  Navigation.jsx
frontend/src/styles/: main.css
frontend/src/utils/: api.js
main-app/: tsconfig.node.json
main-app/src/types/: index.ts
src/components/: ApplicationForm.tsx
src/services/: api.ts
